--- a/src/app/alimentos/alimentos.component.html
+++ b/src/app/alimentos/alimentos.component.html
@@ -1,128 +1,111 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-
-
+<!-- Listado de los alimentos. -->
 <div class="main-content">
   <div class="container-fluid">
+    <div class="row">
+      <!-- Botones de agregar alimentos y el otro de tipo alimento por si llega a faltar algun alimento que no este en la lista -->
+      <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
+        data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
+      <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
+        data-target="#ventanaForm2" (click)="nuevaModaltipoAlimento()">TIPO ALIMENTO +</button>
+      <div class="col-md-12">
 
-
-      <div class="row">
-        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
-        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm2" (click)="nuevoCurso()">TIPO ALIMENTO +</button>
-
-          <div class="col-md-12">
-
-              <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">  <img src="/assets/img/alimentos.png" class="edit" alt=""> Alimentos</h4>
-                     
-                  </div>
-                  <div class="card-body">
-                      <div class="table-responsive">
-                          <table class="table">
-                              <thead class=" text-primary">
-                                  <th>
-                                      ID
-                                  </th>
-                                  <th>
-                                      Tipo Alimento
-                                  </th>
-                                  <th>
-                                      Alimento
-                                  </th>
-                                  
-                                  <th>
-                                    Acción
-                                </th>
-                                  
-                              </thead>
-                              <tbody  *ngFor="let item of alimentosss ;let i=index "  >
-                                  <tr  >
-                                      <td >
-                                        {{i+1}}
-                                      </td>
-                                      <td >
-                                        {{item.tipo_alimento.tipo}}
-                                      </td>
-                                      <td>
-                                        {{item.descripcion}}
-                                      </td>
-                                      
-                                      <td>
-                                        <button1 color="primary" (click)="editarAlimento(item)">
-                                          <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
-                                        </button1>
-                                        
-                                        
-                                       <button2 > <i class="material-icons editable-row" (click)="showModalEliminar(item.id)" >delete</i></button2>
-                                    </td>
-                                    
-                                  </tr>
-                                 
-                              </tbody>
-                          </table>
-
-
-                          
-                      </div>
-                  </div>
-              </div>
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title disabled"> <img src="/assets/img/alimentos.png" class="edit" alt=""> Alimentos</h4>
           </div>
-          
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table">
+                <thead class=" text-primary">
+                  <th>
+                    ID
+                  </th>
+                  <th>
+                    Tipo Alimento
+                  </th>
+                  <th>
+                    Alimento
+                  </th>
+                  <th>
+                    Acción
+                  </th>
+
+                </thead>
+                <tbody *ngFor="let item of alimentosss ;let i=index ">
+                  <tr>
+                    <td>
+                      {{i+1}}
+                    </td>
+                    <td>
+                      {{item.tipo_alimento.tipo}}
+                    </td>
+                    <td>
+                      {{item.descripcion}}
+                    </td>
+
+                    <td>
+                    <!-- Botones de editar y eliminar alimentos -->
+                      <button1 color="primary" (click)="editarAlimento(item)">
+                        <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                      </button1>
+                      
+                      <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                      </button2>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
 </div>
-
-<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal de Registro de Alimentos -->
+<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
       <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png"
+            alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="alimentoForm">
 
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr text-center">Tipo Alimento</label> <br>
-   
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr text-center">Tipo Alimento</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
+                <div class="selected-option" (click)="toggleShowMoreOptions()">
+                  {{ getSelectedOptionLabel() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container">
+                  <ng-container *ngFor="let item of tipoalimentosss">
+                    <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7"
+                      (click)="selectOption(item)">{{ item.tipo }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{
+                      item.tipo }}</div>
+                    <div *ngIf="showIdTipoalimentoError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                </div>
+              </div>
 
-    
-<div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
-  <div class="selected-option" (click)="toggleShowMoreOptions()">
-    {{ getSelectedOptionLabel() }}
-    <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
-  </div>
-  <div class="options-container">
-    <ng-container *ngFor="let item of tipoalimentosss">
-      <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7" (click)="selectOption(item)">{{ item.tipo }}</div>
-      <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{ item.tipo }}</div>
-      <div *ngIf="showIdTipoalimentoError" class="text-danger">Campo requerido</div>
-    </ng-container>
-  </div>
-</div>
+            </div>
+          </div>
 
-
-
-
-  
-  </div>
-</div>
-
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr">Descripción</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="descripcion">
-    <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
-  </div>
-</div>
-
-<!-- ... -->
-
-
-          <!-- ... -->
-
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Descripción</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="descripcion">
+              <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
           <input type="hidden" formControlName="funcion">
         </form>
       </div>
@@ -134,25 +117,27 @@
   </div>
 </div>
 
-
-<div class="modal fade" id="ventanaForm2" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal de Registro de Tipos de Alimentos -->
+<div class="modal fade" id="ventanaForm2" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
       <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{titulo2Form}} <img src="assets/img/comida.png"
+            alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="TipoalimentoForm">
 
 
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr">Tipo</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="tipo">
-    <div *ngIf="showTipoError" class="text-danger">Campo requerido</div>
-  </div>
-</div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Tipo</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="tipo">
+              <div *ngIf="showTipoError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
 
 
           <input type="hidden" formControlName="funcion">
@@ -165,5 +150,3 @@
     </div>
   </div>
 </div>
-
-
