--- a/src/app/credito/credito.component.html
+++ b/src/app/credito/credito.component.html
@@ -1,1 +1,211 @@
-<p>credito works!</p>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<div class="main-content">
+  <div class="container-fluid">
+
+
+    <div class="row">
+      <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
+        data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
+
+      <div class="col-md-12">
+
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title disabled"> <img src="/assets/img/tarjeta-de-credito.png" class="edit" alt=""> Créditos
+            </h4>
+
+          </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table">
+                <thead class=" text-primary">
+                  <th>
+                    ID
+                  </th>
+                  <th>
+                    Nombres
+                  </th>
+                  <th>
+                    Email
+                  </th>
+                  <th>
+                    Teléfono
+                  </th>
+                  <th>
+                    Plato
+                  </th>
+                  <th>
+                    Cantidad
+                  </th>
+                  <th>
+                    Precio
+                  </th>
+                  <th>
+                    Fecha
+                  </th>
+                  <th>
+                    Pagado
+                  </th>
+
+                  <th>
+                    Acción
+                  </th>
+
+                </thead>
+                <tbody *ngFor="let item of creditosss ;let i=index ">
+                  <tr>
+
+
+                    <td>
+                      {{i+1}}
+                    </td>
+                    <td>
+                      {{item.persona.nombre}}
+                    </td>
+                    <td>
+                      {{item.persona.email}}
+                    </td>
+                    <td>
+                      {{item.persona.telefono}}
+                    </td>
+                    <td>
+                      {{item.plato.descripcion}}
+                    </td>
+                    <td>
+                      {{item.cantidad}}
+                    </td>
+                    <td>
+                      {{item.precio}}
+                    </td>
+                    <td>
+                      {{item.fecha}}
+                    </td>
+                    <td>
+                      {{item.pagado}}
+                    </td>
+                    <td>
+                      <button1 color="primary" (click)="editarCreditos(item)">
+                        <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                      </button1>
+
+
+                      <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                      </button2>
+                    </td>
+
+                  </tr>
+
+                </tbody>
+              </table>
+
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content d-flex align-items-center">
+      <div class=" heads x">
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png"
+            alt=""></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="creditosForm">
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr text-center">Plato</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptionsplato">
+                <div class="selected-option " (click)="toggleShowMoreOptionsplato()">
+                  {{ getSelectedOptionLabelplato() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container ">
+                  <ng-container *ngFor="let item of platosss">
+                    <!-- Agrega el atributo [value] para almacenar el ID del plato seleccionado -->
+                    <div class="option example-full-width estilos " *ngIf="!showMoreOptionsplato && index >= 7"
+                      (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptionsplato"
+                      (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div *ngIf="showIdplatoError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr text-center">Persona</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptionspersona">
+                <div class="selected-option" (click)="toggleShowMoreOptionspersona()">
+                  {{ getSelectedOptionLabelpersona() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container">
+                  <ng-container *ngFor="let item of personasss">
+                    <!-- Agrega el atributo [value] para almacenar el ID del persona seleccionado -->
+                    <div class="option example-full-width estilos" *ngIf="!showMoreOptionspersona && index >= 7"
+                      (click)="selectOptionpersona(item)" [value]="item.id">{{ item.nombre }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptionspersona"
+                      (click)="selectOptionpersona(item)" [value]="item.id">{{ item.nombre }}</div>
+                    <div *ngIf="showPersonaError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Cantidad</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="cantidad">
+              <div *ngIf="showCantidadError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Precio</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="precio">
+              <div *ngIf="showPrecioError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Fecha</label> <br>
+              <input class="example-full-width estilos" type="date" formControlName="fecha">
+              <div *ngIf="showFechaError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Pagado</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="pagado">
+              <div *ngIf="showPagadoError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+          <input type="hidden" formControlName="funcion">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-danger" (click)="addCredito()" data-dismiss="modal">Guardar</button>
+      </div>
+    </div>
+  </div>
+</div>
