--- a/src/app/ingredientes/ingredientes.component.html
+++ b/src/app/ingredientes/ingredientes.component.html
@@ -1,180 +1,179 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-
 <div class="main-content">
   <div class="container-fluid">
 
 
-      <div class="row">
-        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
+    <div class="row">
+      <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
+        data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
 
-          <div class="col-md-12">
+      <div class="col-md-12">
 
-              <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">  <img src="/assets/img/alimentos.png" class="edit" alt=""> Ingredientes</h4>
-                     
-                  </div>
-                  <div class="card-body">
-                      <div class="table-responsive">
-                          <table class="table">
-                              <thead class=" text-primary">
-                                  <th>
-                                      ID
-                                  </th>
-                                  <th>
-                                      Plato
-                                  </th>
-                                  <th>
-                                      Alimento
-                                  </th>
-                                  <th>
-                                    Peso
-                                </th>
-                                <th>
-                                  Precio
-                              </th>
-                                  
-                                  <th>
-                                    Acción
-                                </th>
-                                  
-                              </thead>
-                              <tbody  *ngFor="let item of ingredientesss ;let i=index "  >
-                                  <tr  >
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title disabled"> <img src="/assets/img/alimentos.png" class="edit" alt=""> Ingredientes</h4>
 
-                                    
-                                      <td >
-                                        {{i+1}}
-                                      </td>
-                                      <td>
-                                        {{item.plato.descripcion}}
-                                      </td>
-                                      <td >
-                                        {{item.alimento.descripcion}}
-                                      </td>
-                                      <td >
-                                        {{item.peso.descripcion}}
-                                      </td>
-                                      <td>
-                                        {{item.precio}}
-                                      </td>
-                                      
-                                      <td>
-                                        <button1 color="primary" (click)="editarIngrediente(item)">
-                                          <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
-                                        </button1>
-                                        
-                                        
-                                       <button2 > <i class="material-icons editable-row" (click)="showModalEliminar(item.id)" >delete</i></button2>
-                                    </td>
-                                    
-                                  </tr>
-                                 
-                              </tbody>
-                          </table>
-
-
-                          
-                      </div>
-                  </div>
-              </div>
           </div>
-          
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table">
+                <thead class=" text-primary">
+                  <th>
+                    ID
+                  </th>
+                  <th>
+                    Plato
+                  </th>
+                  <th>
+                    Alimento
+                  </th>
+                  <th>
+                    Peso
+                  </th>
+                  <th>
+                    Precio
+                  </th>
+
+                  <th>
+                    Acción
+                  </th>
+
+                </thead>
+                <tbody *ngFor="let item of ingredientesss ;let i=index ">
+                  <tr>
+
+
+                    <td>
+                      {{i+1}}
+                    </td>
+                    <td>
+                      {{item.plato.descripcion}}
+                    </td>
+                    <td>
+                      {{item.alimento.descripcion}}
+                    </td>
+                    <td>
+                      {{item.peso.descripcion}}
+                    </td>
+                    <td>
+                      {{item.precio}}
+                    </td>
+
+                    <td>
+                      <button1 color="primary" (click)="editarIngrediente(item)">
+                        <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                      </button1>
+
+
+                      <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                      </button2>
+                    </td>
+
+                  </tr>
+
+                </tbody>
+              </table>
+
+
+
+            </div>
+          </div>
+        </div>
       </div>
+
+    </div>
   </div>
 </div>
 
-<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
       <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png"
+            alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="ingredientesForm">
 
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr text-center">Plato</label> <br>
-    <div class="custom-dropdown" [class.show-more-options]="showMoreOptionsplato">
-      <div class="selected-option " (click)="toggleShowMoreOptionsplato()">
-        {{ getSelectedOptionLabelplato() }}
-        <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
-      </div>
-      <div class="options-container ">
-        <ng-container *ngFor="let item of platosss">
-          <!-- Agrega el atributo [value] para almacenar el ID del plato seleccionado -->
-          <div class="option example-full-width estilos " *ngIf="!showMoreOptionsplato && index >= 7" (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
-          <div class="option estil editable-row" *ngIf="showMoreOptionsplato" (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
-          <div *ngIf="showIdplatoError" class="text-danger">Campo requerido</div>
-        </ng-container>
-      </div>
-    </div> 
-    <!-- Repite el mismo cambio para los campos id_alimento e id_peso -->
-    
-    
-
-  </div>
-</div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr text-center">Plato</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptionsplato">
+                <div class="selected-option " (click)="toggleShowMoreOptionsplato()">
+                  {{ getSelectedOptionLabelplato() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container ">
+                  <ng-container *ngFor="let item of platosss">
+                    <!-- Agrega el atributo [value] para almacenar el ID del plato seleccionado -->
+                    <div class="option example-full-width estilos " *ngIf="!showMoreOptionsplato && index >= 7"
+                      (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptionsplato"
+                      (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div *ngIf="showIdplatoError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr text-center">Alimento</label> <br>
-<div class="custom-dropdown" [class.show-more-options]="showMoreOptionsalimento">
-  <div class="selected-option" (click)="toggleShowMoreOptionsalimento()">
-    {{ getSelectedOptionLabelalimento() }}
-    <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
-  </div>
-  <div class="options-container">
-    <ng-container *ngFor="let item of alimentosss">
-      <!-- Agrega el atributo [value] para almacenar el ID del plato seleccionado -->
-      <div class="option example-full-width estilos" *ngIf="!showMoreOptionsalimento && index >= 7" (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
-      <div class="option estil editable-row" *ngIf="showMoreOptionsalimento" (click)="selectOptionalimento(item)" [value]="item.id">{{ item.descripcion }}</div>
-      <div *ngIf="showIdalimentoError" class="text-danger">Campo requerido</div>
-    </ng-container>
-  </div>
-</div> 
-<!-- Repite el mismo cambio para los campos id_alimento e id_peso -->
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr text-center">Alimento</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptionsalimento">
+                <div class="selected-option" (click)="toggleShowMoreOptionsalimento()">
+                  {{ getSelectedOptionLabelalimento() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container">
+                  <ng-container *ngFor="let item of alimentosss">
+                    <!-- Agrega el atributo [value] para almacenar el ID del alimento seleccionado -->
+                    <div class="option example-full-width estilos" *ngIf="!showMoreOptionsalimento && index >= 7"
+                      (click)="selectOptionalimento(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptionsalimento"
+                      (click)="selectOptionalimento(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div *ngIf="showIdalimentoError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
-  </div>
-</div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr text-center">Peso</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptionspeso">
+                <div class="selected-option" (click)="toggleShowMoreOptionspeso()">
+                  {{ getSelectedOptionLabelpeso() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container">
+                  <ng-container *ngFor="let item of pesosss">
+                    <!-- Agrega el atributo [value] para almacenar el ID del peso seleccionado -->
+                    <div class="option example-full-width estilos" *ngIf="!showMoreOptionspeso && index >= 7"
+                      (click)="selectOptionpeso(item)" [value]="item.id">{{ item.descripcion }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptionspeso" (click)="selectOptionpeso(item)"
+                      [value]="item.id">{{ item.descripcion }}</div>
+                    <div *ngIf="showIdpesoError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
 
-
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr text-center">Peso</label> <br>
-<div class="custom-dropdown" [class.show-more-options]="showMoreOptionspeso">
-  <div class="selected-option" (click)="toggleShowMoreOptionspeso()">
-    {{ getSelectedOptionLabelpeso() }}
-    <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
-  </div>
-  <div class="options-container">
-    <ng-container *ngFor="let item of pesosss">
-      <!-- Agrega el atributo [value] para almacenar el ID del plato seleccionado -->
-      <div class="option example-full-width estilos" *ngIf="!showMoreOptionspeso && index >= 7" (click)="selectOptionplato(item)" [value]="item.id">{{ item.descripcion }}</div>
-      <div class="option estil editable-row" *ngIf="showMoreOptionspeso" (click)="selectOptionpeso(item)" [value]="item.id">{{ item.descripcion }}</div>
-      <div *ngIf="showIdpesoError" class="text-danger">Campo requerido</div>
-    </ng-container>
-  </div>
-</div> 
-<!-- Repite el mismo cambio para los campos id_alimento e id_peso -->
-
-
-  </div>
-</div>
-
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr">Precio</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="precio">
-    <div *ngIf="showPrecioError" class="text-danger">Campo requerido</div>
-  </div>
-</div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Precio</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="precio">
+              <div *ngIf="showPrecioError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
 
 
           <input type="hidden" formControlName="funcion">
@@ -187,4 +186,3 @@
     </div>
   </div>
 </div>
-
