--- a/src/app/tipoalimentos/tipoalimentos.component.html
+++ b/src/app/tipoalimentos/tipoalimentos.component.html
@@ -6,86 +6,91 @@
   <div class="container-fluid">
 
 
-      <div class="row">
-        <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title"  data-toggle="modal" data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
+    <div class="row">
+      <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
+        data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
 
-          <div class="col-md-12">
+      <div class="col-md-12">
 
-              <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title disabled">  <img src="/assets/img/tipoalimentos.png" class="edit" alt=""> Tipos Alimentos</h4>
-                     
-                  </div>
-                  <div class="card-body">
-                      <div class="table-responsive">
-                          <table class="table">
-                              <thead class=" text-primary">
-                                  <th>
-                                      ID
-                                  </th>
-                                 
-                                  <th>
-                                      Descripción
-                                  </th>
-                                  
-                                  <th>
-                                    Acción
-                                </th>
-                                  
-                              </thead>
-                              <tbody  *ngFor="let item of tipoalimentosss ;let i=index "  >
-                                  <tr  >
-                                      <td >
-                                        {{i+1}}
-                                      </td>
-                                    
-                                      <td>
-                                        {{item.tipo}}
-                                      </td>
-                                      
-                                      <td>
-                                        <button1 color="primary" (click)="editartipoAlimento(item)">
-                                          <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
-                                        </button1>
-                                        
-                                        
-                                       <button2 > <i class="material-icons editable-row" (click)="showModalEliminar(item.id)" >delete</i></button2>
-                                    </td>
-                                    
-                                  </tr>
-                                 
-                              </tbody>
-                          </table>
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title disabled"> <img src="/assets/img/tipoalimentos.png" class="edit" alt=""> Tipos
+              Alimentos</h4>
 
-
-                          
-                      </div>
-                  </div>
-              </div>
           </div>
-          
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table">
+                <thead class=" text-primary">
+                  <th>
+                    ID
+                  </th>
+
+                  <th>
+                    Descripción
+                  </th>
+
+                  <th>
+                    Acción
+                  </th>
+
+                </thead>
+                <tbody *ngFor="let item of tipoalimentosss ;let i=index ">
+                  <tr>
+                    <td>
+                      {{i+1}}
+                    </td>
+
+                    <td>
+                      {{item.tipo}}
+                    </td>
+
+                    <td>
+                      <button1 color="primary" (click)="editartipoAlimento(item)">
+                        <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                      </button1>
+
+
+                      <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                      </button2>
+                    </td>
+
+                  </tr>
+
+                </tbody>
+              </table>
+
+
+
+            </div>
+          </div>
+        </div>
       </div>
+
+    </div>
   </div>
 </div>
 
-<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
       <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png"
+            alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="TipoalimentoForm">
 
 
-<div class="form-row">
-  <div class="form-group col-md-8">
-    <label for="inputState" class="select-gr">Tipo</label> <br>
-    <input class="example-full-width estilos" type="text" formControlName="tipo">
-    <div *ngIf="showTipoError" class="text-danger">Campo requerido</div>
-  </div>
-</div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Tipo</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="tipo">
+              <div *ngIf="showTipoError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
 
 
           <input type="hidden" formControlName="funcion">
@@ -98,4 +103,3 @@
     </div>
   </div>
 </div>
-
